# scheduler-bot_public

./: Cargo.toml  Dockerfile  README.md
postgres-init/: init-db.sql
src/: framework.rs  main.rs
src/commands/: mod.rs
src/commands/scheduler/: mod.rs  post_message.rs  post_timetable.rs  scheduler_setup.rs
src/listeners/: mod.rs
src/utils/: db.rs  mod.rs
src/utils/scheduler/: generate_timetable.rs  mod.rs  scheduler_cache.rs  update.rs
